[package]
name = "rust-image-verification"
version = "0.1.0"
edition = "2021"

[dependencies]
walkdir = "2.5.0"
serde = "1.0.196"
serde_derive = "1.0.196"
serde_json = "1.0.113"
custom-logger = { git = "https://github.com/lmzuccarelli/rust-custom-logger", branch = "main", version = "0.1.4" }

[profile.release]
strip = true # Strip symbols from the binary
opt-level = "s" # Optimize for size
lto = true # Enable link-time optimization
codegen-units = 1 # Mazimize size reduction optimization
